ui table changed

--- a/views/stdDashboard.ejs
+++ b/views/stdDashboard.ejs
@@ -21,7 +21,7 @@
       
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         
-        <h3 class="text-secondary">Welcome, <%= username %></h3>
+        <h3 class="text-info">Welcome, <%= username %></h3>
         
         
        
@@ -31,9 +31,9 @@
           
           <div class="btn-group me-2">
             
-            <a href="computer/<%= studentId %>"><button type="button" class="btn btn-sm btn-outline-secondary"> Profile</button></a>
+            <a href="computer/<%= studentId %>"><button type="button" class="btn btn-sm btn-outline-secondary"> Profile & Fee</button></a>
             
-            <button type="button" class="btn btn-sm btn-outline-secondary"> Fee</button>
+    
             
           </div>
           
@@ -54,7 +54,7 @@
         
       </div>
 
-      <h4 class="mt-4 mb-3 text-secondary">Status of Your Assignment</h4>
+      <h4 class="mt-4 mb-3 text-success">Status of Your Assignment</h4>
       
       <div class="table-responsive">
         
