--- a/views/viewFee.ejs
+++ b/views/viewFee.ejs
@@ -12,20 +12,43 @@
     <%- include ('ejsFunction') %> <!--function javascript ejs-->
     
 <main class="container">
+    
+    <div class="table-responsive">
+        
+              <table class="table bg-light shadow mt-3">
+               
+                <tbody>
+                  
+                  <tr class="d-flex justify-content-around">
+                    
+                    <td> <a class="text-dark small" data-bs-toggle="tooltip" data-bs-placement="bottom" title="goto student list" href="/stdList"><i class="fas fa-arrow-left text-dark fw-bold"></i> Back </a></td>
+                    
+                    
+                    <td><a class="text-dark small" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Check Assignment" href="#"><i class="fas fa-book-reader text-info fw-bold"></i> Assignment</a>
+</td>
+                    
+                  </tr>
+                  
+                </tbody>
+                
+              </table>
+      
+          </div>
   
 
-    <div class="d-flex justify-content-between align-items-center mt-4">
+    <div class="text-center mt-4">
       
-        <a class="text-dark small" data-bs-toggle="tooltip" data-bs-placement="bottom" title="goto student list" href="/stdList"><i class="fas fa-arrow-left text-dark fw-bold"></i> Back </a>
+       
         
          <p class="lead text-secondary fw-normal"><%= viewTitle %></p>
 
-        <a class="text-dark small" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Check Assignment" href="#"><i class="fas fa-book-reader text-info fw-bold"></i> Assignment</a>
 
     
     </div>
     
-        <ul class="list-group">
+    <div class="d-flex justify-content-center">
+        
+        <ul class="list-group shadow">
             
               <li class="list-group-item text-dark fw-bold" aria-current="true"> Categories</li>
               
@@ -38,7 +61,7 @@
               <li class="list-group-item"><a class="text-muted" data-bs-toggle="tooltip" data-bs-placement="bottom" title="view other fee" href="/viewFee/viewOtherFeeReceived"><i class="fas fa-feather text-primary fw-bold"></i> View Other Fee</a></li>
               
            
-              <li class="list-group-item d-flex text-muted">
+              <li class="list-group-item d-flex justify-content-center text-muted">
                   
                 <i class="fas fa-calendar-check fw-bold text-primary me-1"></i> 
                 
@@ -49,6 +72,8 @@
               </li>
               
         </ul>
+        
+        </div>
 
 </main>
     
