--- a/views/viewFeeByDate.ejs
+++ b/views/viewFeeByDate.ejs
@@ -12,15 +12,33 @@
     <%- include ('ejsFunction') %> <!--function javascript ejs-->
     
 <main class="container">
+    
+      <div class="table-responsive">
+        
+              <table class="table bg-light shadow mt-3">
+               
+                <tbody>
+                  
+                  <tr class="d-flex justify-content-around">
+                    
+                    <td><a class="text-dark small" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Go to view fee" href="/viewFee"><i class="fas fa-arrow-left text-dark fw-bold"></i> Back </a></td>
+                    
+                    <td> <a class="text-dark small" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Go to Student List" href="/stdList"><i class="far fa-list-alt text-info fw-bold"></i> Student List</a></td>
+                    
+                  </tr>
+                  
+                </tbody>
+                
+              </table>
+      
+          </div>
   
 
-    <div class="d-flex justify-content-between align-items-center mt-4">
+    <div class="text-center mt-4">
       
-        <a class="text-dark small" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Go to view fee" href="/viewFee"><i class="fas fa-arrow-left text-dark fw-bold"></i> Back </a>
         
          <p class="text-secondary fw-normal"><%= viewTitle %> : <span class="text-danger"><%= convertDate(searchDate) %> </span></p>
 
-        <a class="text-dark small" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Go to Student List" href="/stdList"><i class="far fa-list-alt text-info fw-bold"></i> Student List</a>
 
     
     </div>
@@ -31,30 +49,29 @@
         
               <div class="table-responsive">
         
-              <table class="table border bg-white border-start border-end shadow-sm">
+              <table class="table border bg-white border-start border-end shadow">
                 
                    <tbody>
                      
                     <tr class="text-center">
                         
-                      <th class="p-3 fw-normal text-secondary lead" colspan="6"> Monthly Fee</th>
-                      
+                      <th class="p-3 fw-bold text-success lead" colspan="6"> Monthly Fee Statement</th>
                       
                     </tr>
                     
-                    <tr>
+                    <tr class="bg-secondary">
                       
-                      <td class="fw-bold text-dark border align-middle"> Regn.</td>
+                      <td class="fw-bold text-white border align-middle"> Regn.</td>
                       
-                      <td class="fw-bold text-dark border align-middle"> Student's Name</td>
+                      <td class="fw-bold text-white border align-middle"> Student's Name</td>
                       
-                      <td class="fw-bold text-dark border align-middle"> Father's Name </td>
+                      <td class="fw-bold text-white border align-middle"> Father's Name </td>
                       
-                      <td class="fw-bold text-dark border align-middle"> Narration </td>
+                      <td class="fw-bold text-white border align-middle"> Narration </td>
       
-                      <td class="fw-bold text-dark border align-middle"> Amount </td>
+                      <td class="fw-bold text-white border align-middle"> Amount </td>
                       
-                      <td class="fw-bold text-dark border align-middle"> Entered By </td>
+                      <td class="fw-bold text-white border align-middle"> Entered By </td>
       
                     </tr>
               <% 
@@ -124,23 +141,23 @@
                      
                     <tr class="text-center">
                         
-                      <th class="p-3 fw-normal text-secondary lead" colspan="6"> Exam Fee</th>
+                      <th class="p-3 fw-bold text-success lead" colspan="6"> Exam Fee Statement </th>
                       
                     </tr>
                     
-                    <tr>
+                    <tr class="bg-secondary">
                       
-                      <td class="fw-bold text-dark border align-middle"> Regn.</td>
+                      <td class="fw-bold text-white border align-middle"> Regn.</td>
                       
-                      <td class="fw-bold text-dark border align-middle"> Student's Name</td>
+                      <td class="fw-bold text-white border align-middle"> Student's Name</td>
                       
-                      <td class="fw-bold text-dark border align-middle"> Father's Name </td>
+                      <td class="fw-bold text-white border align-middle"> Father's Name </td>
                       
-                      <td class="fw-bold text-dark border align-middle"> Narration </td>
+                      <td class="fw-bold text-white border align-middle"> Narration </td>
       
-                      <td class="fw-bold text-dark border align-middle"> Amount </td>
+                      <td class="fw-bold text-white border align-middle"> Amount </td>
                       
-                      <td class="fw-bold text-dark border align-middle"> Entered By </td>
+                      <td class="fw-bold text-white border align-middle"> Entered By </td>
       
                     </tr>
               <% 
@@ -216,23 +233,23 @@
                      
                     <tr class="text-center">
                         
-                      <th class="p-3 fw-normal text-secondary lead" colspan="6"> Other Fee</th>
+                      <th class="p-3 fw-bold text-success lead" colspan="6"> Any Other Statement</th>
                       
                     </tr>
                     
-                    <tr>
+                    <tr class="bg-secondary">
                       
-                      <td class="fw-bold text-dark border align-middle"> Regn.</td>
+                      <td class="fw-bold text-white border align-middle"> Regn.</td>
                       
-                      <td class="fw-bold text-dark border align-middle"> Student's Name</td>
+                      <td class="fw-bold text-white border align-middle"> Student's Name</td>
                       
-                      <td class="fw-bold text-dark border align-middle"> Father's Name </td>
+                      <td class="fw-bold text-white border align-middle"> Father's Name </td>
                       
-                      <td class="fw-bold text-dark border align-middle"> Narration </td>
+                      <td class="fw-bold text-white border align-middle"> Narration </td>
       
-                      <td class="fw-bold text-dark border align-middle"> Amount </td>
+                      <td class="fw-bold text-white border align-middle"> Amount </td>
                       
-                      <td class="fw-bold text-dark border align-middle"> Entered By </td>
+                      <td class="fw-bold text-white border align-middle"> Entered By </td>
       
                     </tr>
               <% 
